--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 <body>
   <header>
     <h1>Meal-oy - your Nutrition tracker<3</h1>
-    <p>Daw inde kamo kabalo mag budget pagkaon bala - mama</p>
+    <p>My Diet Diary Pal</p>
   </header>
   
   <div class="app-container">
