--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
     </div>
   </div>
   
+
   <script>
     // Filipino Food Database (simplified with nutrition data)
     const filipinoFoods = [
@@ -554,28 +555,109 @@
         vitaminA: 18,
         vitaminC: 15,
         serving: "100g"
+      },
       {
-        name: "Pandesal (1 piece)",
-        calories: 100,
+        name: "Laing (100g)",
+        calories: 180,
         protein: 3.5,
-        carbs: 18.6,
-        fat: 1.8,
-        vitaminA: 0,
-        vitaminC: 0,
+        carbs: 12.2,
+        fat: 13.8,
+        vitaminA: 15,
+        vitaminC: 10,
+        serving: "100g"
+      },
+      {
+        name: "Bicol Express (100g)",
+        calories: 250,
+        protein: 8.2,
+        carbs: 6.5,
+        fat: 21.3,
+        vitaminA: 5,
+        vitaminC: 8,
+        serving: "100g"
+      },
+      {
+        name: "Bulalo (100g)",
+        calories: 180,
+        protein: 17.2,
+        carbs: 2.8,
+        fat: 12.5,
+        vitaminA: 3,
+        vitaminC: 4,
+        serving: "100g"
+      },
+      {
+        name: "Pinakbet (100g)",
+        calories: 90,
+        protein: 3.8,
+        carbs: 13.5,
+        fat: 2.5,
+        vitaminA: 20,
+        vitaminC: 30,
+        serving: "100g"
+      },
+      {
+        name: "Dinuguan (100g)",
+        calories: 220,
+        protein: 14.2,
+        carbs: 5.6,
+        fat: 15.3,
+        vitaminA: 6,
+        vitaminC: 5,
+        serving: "100g"
+      },
+      {
+        name: "Champorado (1 cup)",
+        calories: 260,
+        protein: 4.5,
+        carbs: 50.2,
+        fat: 6.2,
+        vitaminA: 2,
+        vitaminC: 1,
+        serving: "1 cup"
+      },
+      {
+        name: "Bibingka (1 piece)",
+        calories: 230,
+        protein: 5.2,
+        carbs: 38.1,
+        fat: 7.5,
+        vitaminA: 4,
+        vitaminC: 3,
         serving: "1 piece"
       },
       {
-        name: "Lechon Kawali (100g)",
-        calories: 387,
-        protein: 29.3,
-        carbs: 0,
-        fat: 30.2,
+        name: "Taho (1 cup)",
+        calories: 160,
+        protein: 6.8,
+        carbs: 28.5,
+        fat: 2.3,
         vitaminA: 0,
+        vitaminC: 1,
+        serving: "1 cup"
+      },
+      {
+        name: "Vitamin A Supplement (1 softgel)",
+        calories: 0,
+        protein: 0,
+        carbs: 0,
+        fat: 0.5,
+        vitaminA: 900,
         vitaminC: 0,
-        serving: "100g"
+        serving: "1 softgel (900mcg)"
+      },
+      {
+        name: "Vitamin C Supplement (1 tablet)",
+        calories: 0,
+        protein: 0,
+        carbs: 0,
+        fat: 0,
+        vitaminA: 0,
+        vitaminC: 500,
+        serving: "1 tablet (500mg)"
       }
     ];
-    
+
     // Daily recommended values
     const dailyRecommended = {
       calories: 2000,
